src/index.css
/* ... */
.img-contents {
  width: 65%;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 10px;
  padding: 5px;
  justify-items: center;
}

.rel-imgs {
  width: 95%;
}

.rel-imgs h4 {
  margin-bottom: 0;
}

.descr {
  text-align: center;
  grid-column: span 3;
  text-shadow: black 0px 1px 3px;
}

/* Pop Up styling */
.overlay {
  position: fixed;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-backdrop-filter: blur(8px);
  backdrop-filter: blur(8px);
  width: 100%;
  height: 100%;
  z-index: 100;
}

.pop {
  display: flex;
  flex-direction: column;
  padding: 10px 6px 10px 6px;
  border-radius: 10px;
  border: 1px solid rgba(0, 0, 0, 0.15);
  background-color: rgba(125, 125, 125, 0.727);
  z-index: 1000;
  width: 16rem;
  height: 22rem;
  gap: 5px;
}

.list-coll {
  overflow-y: scroll;
  color: black;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 18px;
}

.b h4 {
  font-weight: 100;
  margin: 0;
  font-size: 1.2rem;
}

.b {
  width: 80%;
  margin-top: 15px;
  padding-left: 5px;
  cursor: pointer;
  background-color: rgba(245, 245, 245, 0.916);
  border-radius: 4px;
  border: 0.4px solid rgba(0, 0, 0, 0.15);
}

.coll-search {
  width: 100%;
}

.hide {
  display: none;
}

/* DownloadPopUp Styling */
.fixed-bot {
  position: fixed;
  bottom: 6px;
  right: 10px;

  opacity: 1;
  visibility: visible;
  transform: translateY(0);
  transition: all 0.15s ease-in;
}

.wra {
  border-radius: 8px;
  border: 0px5 solid black;
  background-color: #0a1721;
  width: 25rem;
  padding: 5px 10px 10px 10px;
}

.slide {
  opacity: 0;
  visibility: hidden;
  transform: translateY(-400px);
}

.content {
  display: flex;
  flex-direction: column;
  gap: 3px;
  justify-content: center;
}

.sub-head {
  margin-top: 15px;
  text-align: justify;
}

strong {
  font-size: 1.2rem;
}

.x-button {
  position: absolute;
  /* transform: rotate(0deg); */
  font-weight: 900;
  background-color: #d8d8d87b;
  width: fit-content;
  padding: 0;
  padding: 1px 5.5px 1.5px 5.5px;
  cursor: pointer;
  border-radius: 3px;
  right: 10px;
  height: 1.2rem;
  transition: all 0.2s ease-in;
}

.x-button p {
  transform: rotate(0deg);
  display: block;
  margin: 0;
  color: black;
  transition: all 0.25s ease;
}

.x-button:hover {
  /* transform: rotate(180deg); */
  background-color: #2828287b;
  p {
    color: white;
    transform: rotate(360deg);
  }
}

.socials {
  display: flex;
  justify-content: space-around;
  gap: 8px;
}

.links {
  width: 8rem;
  display: flex;
  flex-direction: column;
  gap: 2px;
  justify-content: center;
  align-items: center;
  overflow-x: hidden;
}

.social-logo {
  width: 40px;
  height: 40px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
  border-radius: 2px;
  cursor: pointer;
}

.insta {
  background-image: url(./assets/instagram.png);
}

.port {
  background-image: url(./assets/link.png);
}

.x {
  background-image: url(./assets/twitter.png);
}

.logo-text {
  margin-bottom: 0;
  margin-top: 5px;
  font-size: 0.7rem;
}

/* Notification Styling */
.notify-con {
  position: absolute;
  width: 100%;
  display: flex;
  justify-content: center;
  top: 100px;
  scale: 0;
  transition: all 0.2s ease-in-out;
  visibility: hidden;
  opacity: 0;
}

.scale {
  scale: 1;
  visibility: visible;
  opacity: 1;
}

.notify-con p {
  background-color: beige;
  padding: 5px 12px 5px 12px;
  border-radius: 5px;
  color: black;
  text-align: center;
  margin: 0;
  border-left: 5px solid rgb(114, 47, 71);
  font-size: 0.95rem;
}

/* Loading Bar Styling */
.loading-circle {
  display: flex;
  gap: 8px;
  justify-self: center;
  padding: 10px;
}

.cir {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: rgb(117, 107, 95);
  animation: bounce 1s linear infinite;
}

.cir:nth-child(2) {
  animation: bounce 1s linear 0.2s infinite;
}
.cir:nth-child(3) {
  animation: bounce 1s linear 0.5s infinite;
}
.cir:nth-child(4) {
  animation: bounce 1s linear 0.8s infinite;
}

@keyframes bounce {
  0% {
    transform: translateY(0);
  }

  25% {
    transform: translateY(-2px);
  }
  50% {
    transform: translateY(0);
  }
  75% {
    transform: translateY(2px);
  }
  100% {
    transform: translateY(0);
  }
}

/* Alert Page */
.alert-body {
  width: 100%;
  height: 100dvh;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  color: black;
}

.alert-contents {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 90%;
}

.alert-message,
.alert-time {
  width: 100%;
  display: flex;
  justify-content: center;
}

.alert-message p {
  font-size: 2.5rem;
  text-align: center;
}

/* Extras */
.logo-container {
  display: flex;
  justify-content: center;
  align-items: center;
}

.logo-img {
  width: 80px;
  height: 80px;
  object-fit: cover;
  display: block;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #ae8eb1e5;
  }
}

@media (max-width: 800px) {
  .footer {
    grid-template-columns: 1fr 1fr;
  }
  .footer-logo {
    height: 190px;
  }
  .f {
    height: 20px;
    border-radius: 20px;
    padding: 8px 8px;
    border: 1px solid rgba(164, 55, 176, 0.241);
  }
  .footer-grid {
    gap: 10px;
  }
  .img-con {
    width: 90%;
  }
  .navbar .bar {
    font-size: 1.1rem;
    padding: 0.1rem;
    text-align: center;
    padding-top: 5px;
    padding-bottom: 5px;
  }
  .opt button {
    font-size: 1.5rem;
    background-color: rgb(250, 224, 255);
  }
}
/* ... */

